--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,49 +8,49 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
-    <style type="text/css">
-      .navbar {
-        border-bottom: 5px solid black;
-        border-bottom-color: <%= primary_color %>;
-      }
-      .btnprimary {
-        background: <%= primary_color %>;
-        border-color: <%= primary_color %>;
-      }
-      .btnprimary:hover {
-        background: <%= primary_color %>;
-        border-color: <%= primary_color %>;
-        color: <%= secondary_color %>;
-      }
-      .btn-default {
-        background: <%= primary_color %>;
-        border-color: <%= primary_color %>;
-      }
-      .btn-default:hover {
-        background: <%= primary_color %>;
-        border-color: <%= primary_color %>;
-        color: <%= secondary_color %>;
-      }
-      .pagination > .active > a, .pagination > .active > a:hover, .pagination > .active > a:focus, .pagination > .active > span, .pagination > .active > span:hover, .pagination > .active > span:focus {
-        background: <%= primary_color %> ;
-        border-color: <%= primary_color %>;
-      }
-      .pagination > li > a, .pagination > li > span {
-        color: <%= primary_color %>;
-      }
-      .pagination > li > a:hover, .pagination > li > a:focus, .pagination > li > span:hover, .pagination > li > span:focus {
-        color: <%= primary_color %>;
-      }
-      .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
-        color: <%= primary_color %>;
-      }
-      .nav-tabs > li > a:hover {
-        color: <%= primary_color %>;
-      }
-      footer {
-        border-top: 5px solid black;
-        border-top-color: <%= primary_color %>;
-      }
+      <style type="text/css">
+        .navbar {
+          border-bottom: 5px solid black;
+          border-bottom-color: <%= primary_color %>;
+        }
+        .btn-primary {
+          background: <%= primary_color %>;
+          border-color: <%= primary_color %>;
+        }
+        .btn-primary:hover {
+          background: <%= primary_color %>;
+          border-color: <%= primary_color %>;
+          color: <%= secondary_color %>;
+        }
+        .btn-default {
+          background: <%= primary_color %>;
+          border-color: <%= primary_color %>;
+        }
+        .btn-default:hover {
+          background: <%= primary_color %>;
+          border-color: <%= primary_color %>;
+          color: <%= secondary_color %>;
+        }
+        .pagination > .active > a, .pagination > .active > a:hover, .pagination > .active > a:focus, .pagination > .active > span, .pagination > .active > span:hover, .pagination > .active > span:focus {
+          background: <%= primary_color %> ;
+          border-color: <%= primary_color %>;
+        }
+        .pagination > li > a, .pagination > li > span {
+          color: <%= primary_color %>;
+        }
+        .pagination > li > a:hover, .pagination > li > a:focus, .pagination > li > span:hover, .pagination > li > span:focus {
+          color: <%= primary_color %>;
+        }
+        .nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
+          color: <%= primary_color %>;
+        }
+        .nav-tabs > li > a:hover {
+          color: <%= primary_color %>;
+        }
+        footer {
+          border-top: 5px solid black;
+          border-top-color: <%= primary_color %>;
+        }
     </style>
 </head>
 <body>
