--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
-    <% unless primary_color == nil || company_logo == nil%>
+    <% unless primary_color == nil || company_logo == nil %>
       <style type="text/css">
         .navbar {
           border-bottom: 5px solid black;
@@ -47,6 +47,15 @@
         }
         .nav-tabs > li > a:hover {
           color: <%= primary_color %>;
+        }
+        .btn {
+          color: white;
+        }
+        .btn:visited {
+          color: white;
+        }
+        .btn:visited {
+          color: white;
         }
         footer {
           border-top: 5px solid black;
