chnaged order of css in app.html

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,11 +23,16 @@
           border-color: <%= primary_color %>;
           color: <%= secondary_color %>;
         }
-        .btn-default {
+        .btn {
           background: <%= primary_color %>;
           border-color: <%= primary_color %>;
+          color: white;
         }
-        .btn-default:hover {
+
+        .btn:visited {
+          color: white;
+        }
+        .btn:hover {
           background: <%= primary_color %>;
           border-color: <%= primary_color %>;
           color: <%= secondary_color %>;
@@ -48,15 +53,7 @@
         .nav-tabs > li > a:hover {
           color: <%= primary_color %>;
         }
-        .btn {
-          color: white;
-        }
-        .btn:visited {
-          color: white;
-        }
-        .btn:visited {
-          color: white;
-        }
+
         footer {
           border-top: 5px solid black;
           border-top-color: <%= primary_color %>;
