--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -18,7 +18,13 @@
   padding-left: 0;
   padding-right: 0;
 }
-.buttons{
+.room{
   font-color: white;
+  display: inline-block;
+  vertical-align: top;
+  padding: 20px;
 }
+
+
+
 
