Refactoring current_employee.company to current_company

--- a/app/views/employees/employee_search.html.erb
+++ b/app/views/employees/employee_search.html.erb
@@ -1,6 +1,6 @@
  <div class="container">
   <h2 class="center">Search Results for
-  <i class="results"><%= params[:search] %></i> in <%= current_employee.company.name %>
+  <i class="results"><%= params[:search] %></i> in <%= current_company.name %>
   </h2>
   <% if @employee_results.count > 0 %>
       <section class='panel panel-default'>
