--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -49,11 +49,11 @@
     <br>
     <br>
     <h2>Invite Employees</h2>
-    <p><strong>Company: </strong><%= link_to current_employee.company.name,  current_employee.company %> </p>
+    <p><strong>Company: </strong><%= link_to current_company.name,  current_company %> </p>
     <% if @invitees.count > 0 %>
         <div class="well center invite" >
             <input type='text' id='search' placeholder="name" />
-         
+
         </div>
 
 
