fixed the meetings show page button so that when clicked it carries the rooms params to the new meeting form. :octocat: :fire: :fire:

--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -20,7 +20,7 @@
   </div>
   <div class="field">
     <%= f.label :room_id %><br>
-    <%= f.select :room_id, @room_options %>
+    <%= f.select :room_id, @room_options, selected: params[:room_id] %>
   </div>
   <div class="field">
     <%= f.label :start_time %><br>
