--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
   <div class="row pull-right margin-top">
     <form action='/search/employees' method='GET'>
       <input type='text' name='search' placeholder="Employee name or email" size="30"/>
@@ -8,7 +6,6 @@
   </div>
 <div class="container">
   <div class="row">
-    <p id="notice"><%= notice %></p>
 
     <h1><%= @company.name %> Employees</h1>
     <div class='panel panel-default'>
@@ -30,8 +27,7 @@
             <td class='well'><%= link_to employee.name, employee %></td>
             <td><%= employee.email %></td>
             <% if user_is_admin? %>
-              <td><%= link_to 'Show', employee %></td>
-              <td class="well"><%= link_to 'Destroy', employee, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+              <td class="well"><%= link_to 'Remove', employee, method: :delete, data: { confirm: 'Are you sure?' } %></td>
             <% end %>
           </tr>
         <% end %>
