greeting added to pdfs

--- a/app/views/admin/dashboard.html.erb
+++ b/app/views/admin/dashboard.html.erb
@@ -26,8 +26,8 @@
     <div class="row ">
       <div class='col-md-4 col-md-offset-4'>
          <div class="room">
-            <%= link_to 'Room Report PDF', 'room_report', class: "btn btn-info" %>
-            <%= link_to 'Meeting Report PDF', 'meeting_report', class: "btn btn-info" %>
+            <%= link_to 'Room Report PDF', '/admin/room_report', class: "btn btn-info" %>
+            <%= link_to 'Meeting Report PDF', '/admin/meeting_report', class: "btn btn-info" %>
           </div>
         </div>
       </div>
