fixed invite table formatting in meeting show page

--- a/app/assets/stylesheets/meetings.scss
+++ b/app/assets/stylesheets/meetings.scss
@@ -4,5 +4,16 @@
 
 .meeting-buttons {
   margin-bottom: 50px;
+  margin-left: 15px;
+}
+
+.invite-table {
+    width: 100%;
+    margin-left: 15px;
+}
+
+h2 {
+  margin-left: 15px;
+  margin-top: 40px;
 }
 
