--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,9 +86,9 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/rooms">
+      <a class="navbar-brand" href="/">
         <% if company_logo == nil %>
-          <a class="navbar-brand" href="/rooms">CRS2000</a>
+          <a class="navbar-brand" href="/">CRS2000</a>
         <% else %>
           <img alt="Brand" src="<%= company_logo %>">
         <% end %>
