Changed Meeting Private? to 'yes' or 'no'
changed text hover CSS in Scaffold page to tweak public pages

--- a/app/views/admin/reports_meetings.html.erb
+++ b/app/views/admin/reports_meetings.html.erb
@@ -8,9 +8,9 @@
             <th>AGENDA</th>
             <th>STARTS</th>
             <th>FINISHES</th>
-            <th>VISIBILITY</th>
             <th>ROOM</th>
             <th>HOST</th>
+            <th>PRIVATE?</th>
           </tr>
         </thead>
 
@@ -21,11 +21,11 @@
             <td><%= reports_meeting.agenda %></td>
             <td><%= reports_meeting.start_time.strftime("%m/%d/%Y %l:%M %p") %></td>
             <td><%= reports_meeting.end_time.strftime("%m/%d/%Y %l:%M %p") %></td>
-            <td><%= reports_meeting.private %></td>
             <td><%= reports_meeting.room.room_number %></td>
             <td><%= reports_meeting.employee.name %></td>
+            <td><%= is_private?(reports_meeting.private) %></td>
           </tr>
-        <% end %>
+          <% end %>
       </tbody>
     </table>
 </div>
