added test for new meetings link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -98,7 +98,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="/meetings/new">New Meeting</a></li>
+        <li><a href="/meetings/new" id="new_meeting">New Meeting</a></li>
         <li><a href="/meetings">All Meetings</a></li>
         <li><a href="/rooms">All Rooms</a></li>
         <li><a href="/employees">All Employees</a></li>
