--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container brand-box">
   <div class="row">
-    <div class='col-md-4 col-md-offset-4'>
+    <div class='col-md-4 col-md-offset-4 form-box'>
       <%= form_for(@company) do |f| %>
         <% if @company.errors.any? %>
           <div id="error_explanation">
