--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -1,7 +1,11 @@
 <div class='container new-room'>
-  <h1>New Room</h1>
+  <div class="row">
+    <div class='col-md-4 col-md-offset-4 form-box'>
+      <h1>New Room</h1>
 
-  <%= render 'form' %>
+      <%= render 'form' %>
 
-  <%= link_to 'Back', dashboard_path %>
+      <%= link_to 'Back', dashboard_path %>
+    </div>
+  </div>
 </div>
