testing crs2000 returns to home page, changed link href to /

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -88,7 +88,7 @@
       </button>
       <a class="navbar-brand" href="/rooms">
         <% if company_logo == nil %>
-          <a class="navbar-brand" href="/rooms">CRS2000</a>
+          <a class="navbar-brand" href="/">CRS2000</a>
         <% else %>
           <img alt="Brand" src="<%= company_logo %>">
         <% end %>
