centerd text in box cuz it looked weird left align in a box

--- a/app/views/companies/_form.html.erb
+++ b/app/views/companies/_form.html.erb
@@ -1,6 +1,7 @@
 <div class="container brand-box">
   <div class="row">
     <div class='col-md-4 col-md-offset-4 form-box'>
+      <h2>Branding</h2>
       <%= form_for(@company) do |f| %>
         <% if @company.errors.any? %>
           <div id="error_explanation">
