--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -88,7 +88,7 @@
       </button>
       <a class="navbar-brand" href="/">
         <% if company_logo == nil %>
-          <a class="navbar-brand" href="/">CRS2000</a>
+          <%= link_to 'CRS2000', root_path, class: "navbar-brand" %>
         <% else %>
           <img alt="Brand" src="<%= company_logo %>">
         <% end %>
