--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -3,7 +3,7 @@
 
 <div>
     <div class="col-md-12">
-      <h2><%= @meeting.title.capitalize %></h2>
+      <h2><%= @meeting.title.titleize %> in <%= @meeting.room.name.titleize %></h2>
       <div class="meeting-buttons">
         <%= link_to 'Join', join_employee_path(@meeting.id), method: 'POST', class: 'btn btn-default join-button' %>
         <%= link_to 'Edit', edit_meeting_path(@meeting), class: "btn btn-default" %>
@@ -41,23 +41,17 @@
   </div>
   </div>
 
-
+<div class="invite-table">
   <% if @meeting_owner == true %>
-  <div class="row">
+  <div class="col-md-12">
     <br>
     <br>
-    <h2>Invite Employees</h2>
+    <h3>Invite Employees to this Meeting</h3>
     <p><strong>Company: </strong><%= link_to current_company.name,  current_company %> </p>
     <% if @invitees.count > 0 %>
         <div class="well center invite" >
             <input type='text' id='search' placeholder="name" />
-
         </div>
-
-
-
-
-
         <table class="table invite" >
           <thead>
           <tr>
@@ -70,7 +64,7 @@
             <tr>
               <td>
                 <% if invitee.invitations.where(meeting_id: @meeting.id).exists? %>
-                    <br><p style="font-style: italic">Already invited!</p>
+                    <br><p style="font-style: italic">Invite Sent!</p>
                 <% else %>
                     <%= link_to 'Invite', send_invitation_path(@meeting.id, invitee.id), method: 'POST', class: 'btn btn-default' %>
                 <% end %>
@@ -88,6 +82,7 @@
     <% end %>
   </div>
   <% end %>
+</div>
 </div>
 </div>
 
