--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
+    <div class="col-md-4 col-md-offset-4 form-box">
 
+      <h2>New Meeting</h2>
 
-    <h2>New Meeting</h2>
-
-
-    <%= render 'form' %>
+      <%= render 'form' %>
+    </div>
   </div>
 </div>
