added room header

--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -19,5 +19,21 @@
   width: 100%;
   height: auto;
 }
+.room-row {
+  position: relative;
+}
 
+.room-header {
+  position: absolute;
+  // top: 200px;
+  h2 {
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    margin: 0;
+    line-height: 350px;
+    padding-left: 1em;
+    padding-right: 1em;
+    text-align: center;
+  }
+}
 
