updated admin dashboard to align divs

--- a/app/views/invitations/show.html.erb
+++ b/app/views/invitations/show.html.erb
@@ -13,7 +13,7 @@
         <%= f.select :meeting_id, @meeting_options %>
       </div>
       <div class="invite-row">
-        <%= f.submit 'Invite', class: "btn btn-default btn-sm" %>
+        <%= f.submit 'Invite', class: "btn btn-default btn-xs" %>
       </div>
       <% end %>
     </div>
