--- a/app/views/meeting_mailer/meeting_cancelled.txt.erb
+++ b/app/views/meeting_mailer/meeting_cancelled.txt.erb
@@ -5,8 +5,8 @@ This email is to inform you that the following meeting has been cancelled:
     Title: <%= @meeting.title %>
     Room: <%= @meeting.room.name %> (<%= @meeting.room.room_number %>)
     Location: <%= @meeting.room.location %>
-    Start Time: <%= @meeting.start_time %>
-    End Time: <%= @meeting.end_time %>
+    Start Time: <%= @meeting.start_time.strftime("%B %-d, %Y at %-I:%M%P") %>
+    End Time: <%= @meeting.end_time.strftime("%B %-d, %Y at %-I:%M%P") %>
 
 
 Contact your supervisor with any questions.
