--- a/app/views/meeting_mailer/meeting_scheduled.html.erb
+++ b/app/views/meeting_mailer/meeting_scheduled.html.erb
@@ -5,8 +5,8 @@
     <li>Title: <%= @meeting.title %> </li>
     <li>Room: <%= @meeting.room.name %> (<%= @meeting.room.room_number %>) </li>
     <li>Location: <%= @meeting.room.location %> </li>
-    <li>Start Time: <%= @meeting.start_time %> </li>
-    <li>End Time: <%= @meeting.end_time %> </li>
+    <li>Start Time: <%= @meeting.start_time.strftime("%B %-d, %Y at %-I:%M%P") %> </li>
+    <li>End Time: <%= @meeting.end_time.strftime("%B %-d, %Y at %-I:%M%P") %> </li>
   </ul>
 </p>
 <p>Please be sure to arrive on time. Thank you.</p>
