--- a/app/views/meeting_mailer/meeting_scheduled.txt.erb
+++ b/app/views/meeting_mailer/meeting_scheduled.txt.erb
@@ -5,8 +5,8 @@ Hello <%=@user%>,
     Title: <%= @meeting.title %>
     Room: <%= @meeting.room.name %> (<%= @meeting.room.room_number %>)
     Location: <%= @meeting.room.location %>
-    Start Time: <%= @meeting.start_time %>
-    End Time: <%= @meeting.end_time %>
+    Start Time: <%= @meeting.start_time.strftime("%B %-d, %Y at %-I:%M%P") %>
+    End Time: <%= @meeting.end_time.strftime("%B %-d, %Y at %-I:%M%P") %>
 
 Please be sure to arrive on time. Thank you.
 
