--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -3,6 +3,38 @@
     <div style="background-image: url(<%= @room.imgurl %>); background-repeat: no-repeat; background-size: cover; height: 350px;margin-top:2em;">
       <div class="room-header"><h2><%= @room.name %></h2></div>
     </div>
+  </div>
+  <div class="row">
+    <div class="col-md-6">
+      <h3>Room details</h3>
+        <p><strong>Building: </strong><%= @room.location %></p>
+        <p><strong>Occupancy: </strong><%= @room.max_occupancy %></p>
+        <p><strong>Room Number: </strong><%= @room.room_number%></p>
+      <h4>Amenities:</h4>
+        <ul>
+          <% @room.amenities.each do |amenity| %>
+          <li><%= amenity.perk %></li>
+          <% end %>
+        </ul>
+    </div>
+    <div class="col-md-6">
+      <h3>Meetings</h3>
+      <table class="table">
+        <tr>
+          <td><strong>Topic</strong></td>
+          <td><strong>Start time</strong></td>
+          <td><strong>End time</strong></td>
+        </tr>
+        <% @room.meetings.each do |meeting| %>
+        <tr>
+          <td><%= link_to meeting.title.capitalize, meeting %></td>
+          <td><%= meeting.start_time.strftime("%m/%d/%Y %l:%M %p") %></td>
+          <td><%= meeting.end_time.strftime("%m/%d/%Y %l:%M %p") %></td>
+        </tr>
+        <% end %>
+      </table>
+      <p><%= link_to 'Schedule a meeting here', new_meeting_path(room_id: @room.id), class: 'btn btn-default' %></p>
+    </div>
 
   </div>
 
