--- a/app/views/meeting_mailer/invited_to_meeting.txt.erb
+++ b/app/views/meeting_mailer/invited_to_meeting.txt.erb
@@ -13,8 +13,7 @@ You have been invited to the following meeting:
           <%= employee.name %>
         <% end %>
 
-To join this meeting, follow this link and click 'Join': <%= url_for(host: 'http://crs2000.herokuapp.com/',
-                                                                     controller: 'meetings',
+To join this meeting, follow this link and click 'Join': <%= url_for(controller: 'meetings',
                                                                      action: 'show',
                                                                      id: @meeting.id) %>
 
