--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="row room-row">
+  <div class="row">
     <div style="background-image: url(<%= @room.imgurl %>); background-repeat: no-repeat; background-size: cover; height: 350px;margin-top:2em;">
       <div class="room-header"><h2><%= @room.name %></h2></div>
     </div>
@@ -19,20 +19,24 @@
     </div>
     <div class="col-md-6">
       <h3>Meetings</h3>
-      <table class="table">
-        <tr>
-          <td><strong>Topic</strong></td>
-          <td><strong>Start time</strong></td>
-          <td><strong>End time</strong></td>
-        </tr>
-        <% @room.meetings.each do |meeting| %>
-        <tr>
-          <td><%= link_to meeting.title.capitalize, meeting %></td>
-          <td><%= meeting.start_time.strftime("%m/%d/%Y %l:%M %p") %></td>
-          <td><%= meeting.end_time.strftime("%m/%d/%Y %l:%M %p") %></td>
-        </tr>
+      <% if @room.meetings.count == 0 %>
+        <p>No meetings scheduled here.</p>
+      <% else %>
+        <table class="table">
+          <tr>
+            <td><strong>Topic</strong></td>
+            <td><strong>Start time</strong></td>
+            <td><strong>End time</strong></td>
+          </tr>
+          <% @room.meetings.each do |meeting| %>
+          <tr>
+            <td><%= link_to meeting.title.capitalize, meeting %></td>
+            <td><%= meeting.start_time.strftime("%m/%d/%Y %l:%M %p") %></td>
+            <td><%= meeting.end_time.strftime("%m/%d/%Y %l:%M %p") %></td>
+          </tr>
+          <% end %>
+        </table>
         <% end %>
-      </table>
       <p><%= link_to 'Schedule a meeting here', new_meeting_path(room_id: @room.id), class: 'btn btn-default' %></p>
     </div>
 
